<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/tv_trophy"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:src="@drawable/trophy" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your Score is 0 Out Of 25"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_margin="15dp"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>